syntax = "proto3";

// 生产代码包的包名
package errorCode;

// 生成代码包位置
option go_package = "./errorCode";

// 请求消息定义
message ErrorReq{
  string msg = 1;
}

// 回应消息定义
message ErrorResp{
  string msg = 1;
}

// 服务定义
service Error{
  rpc ErrorServer(ErrorReq) returns(ErrorResp){}
}